[gd_scene load_steps=3 format=3 uid="uid://hajuk2n703qe"]

[ext_resource type="Script" path="res://Menus/pause_menu.gd" id="1_joehn"]

[sub_resource type="Theme" id="Theme_j3s1i"]

[node name="Pause_menu" type="CanvasLayer"]

[node name="PauseMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 378.0
offset_right = 10.0
offset_bottom = 378.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_joehn")
start_game = "res://Menus/start_menu.tscn"

[node name="MarginContainer" type="MarginContainer" parent="PauseMenu"]
layout_mode = 0
offset_right = 166.0
offset_bottom = 108.0
theme = SubResource("Theme_j3s1i")

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/MarginContainer"]
layout_mode = 2

[node name="Resume" type="Button" parent="PauseMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="Settings" type="Button" parent="PauseMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="Quit" type="Button" parent="PauseMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Main Menu
"

[connection signal="pressed" from="PauseMenu/MarginContainer/VBoxContainer/Resume" to="PauseMenu" method="_on_resume_pressed"]
[connection signal="pressed" from="PauseMenu/MarginContainer/VBoxContainer/Settings" to="PauseMenu" method="_on_settings_pressed"]
[connection signal="pressed" from="PauseMenu/MarginContainer/VBoxContainer/Quit" to="PauseMenu" method="_on_quit_pressed"]
